--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.10.4",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -49,6 +50,7 @@
     "kleur": "^4.1.5",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
+    "node-cron": "^3.0.3",
     "winston": "^3.14.2"
   }
 }
