--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongodb": "^4.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.7",
@@ -50,7 +51,9 @@
     "kleur": "^4.1.5",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "xlsx": "^0.18.5"
   }
 }
