--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
 	"rules": {
 		"no-unused-vars": ["error", { "argsIgnorePattern": "next"}],
 		"camelcase": "off",
+		"no-restricted-globals": "off",
 		"consistent-return": "off",
 		"class-methods-use-this": "off",
 		"import/prefer-default-export":"off",
